--- a/package.json
+++ b/package.json
@@ -84,6 +84,6 @@
     "warning": "^4.0.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
+    "react": "^18.2.0"
   }
 }
